--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,10 @@
 $orange: #ff9100;
 
-body {
+$bg-gradient: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+
+body, html {
+    width: 100%;
+    height: 100%;
     background-color: $orange;
+    background-image: $bg-gradient;
 }
