--- a/src/index.scss
+++ b/src/index.scss
@@ -3,14 +3,23 @@ $orange: #ff9100;
 $bg-gradient: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
 
 body, html {
-    width: 100%;
-    height: 100%;
-    background-color: $orange;
-    background-image: $bg-gradient;
+  width: 100%;
+  height: 100%;
+  background-color: $orange;
+  background-image: $bg-gradient;
 }
 
 .main {
-    display: flex;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+.button {
+  transition: transform 280ms ease-in-out;
+  // position: relative;
+
+  &:hover {
+    transform: translateY(-2.8px);
+  }
 }
