Slight button animation change

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,7 +16,7 @@ body, html {
 }
 
 .button {
-  transition: transform 280ms ease-in-out;
+  transition: transform 220ms ease-in-out;
   // position: relative;
 
   &:hover {
@@ -24,6 +24,6 @@ body, html {
   }
 
   &:active {
-    transform: scale(0.8);
+    transform: translateY(2.8px);
   }
 }
