--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,18 +1,32 @@
 @import 'bulma';
 
 $orange: #ff9100;
-
 $bg-gradient: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
 
-body, html, #app {
-	width: 100%;
-	height: 100%;
-	background-color: $orange;
-	background-image: $bg-gradient;
-  }
+body,
+html,
+#app {
+    width: 100%;
+    height: 100%;
+    background-color: $orange;
+    background-image: $bg-gradient;
+}
 
 .main {
-	display: flex;
-	align-items: center;
-	height: 100%;
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
+.button {
+  transition: transform 220ms ease-in-out;
+  position: relative;
+
+  &:hover {
+    transform: translateY(-2.8px);
+  }
+
+  &:active {
+    transform: translateY(2.8px);
+  }
 }
