Add some questions in

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -19,7 +19,7 @@ html,
 }
 
 .button {
-  transition: transform 220ms ease-in-out;
+  transition: transform 220ms ease-in-out, background-color 400ms ease;
   position: relative;
 
   &:hover {
