--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,19 +3,25 @@
 $orange: #ff9100;
 $bg-gradient: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
 
+html {
+  height: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: $bg-gradient;
+}
+
 body,
-html,
 #app {
-    width: 100%;
-    height: 100%;
-    background-color: $orange;
-    background-image: $bg-gradient;
+  height: 100%;
 }
 
 .main {
-    display: flex;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .button {
